// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render the short version 1`] = `
.c10 {
  margin: 0;
  color: #000000;
  font-weight: inherit;
  font-size: 1rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.25;
  margin-bottom: 0;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 0;
  padding: 0 10px;
  background-color: #ffffff;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  margin: 0 auto;
  padding: 0 10px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  max-width: none;
}

.c2::after {
  content: '';
  display: block;
  min-height: inherit;
  font-size: 0;
}

.c2 .c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  color: #000000;
}

.c9:focus {
  background-color: #FEC813;
}

.c9 .c15 {
  margin: 4px;
}

.c9 .c15 svg rect,
.c9 .c15 svg polygon,
.c9 .c15 svg path {
  fill: #000000;
}

.c9:hover {
  color: #ec0000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:hover .c15 svg rect,
.c9:hover .c15 svg polygon,
.c9:hover .c15 svg path {
  fill: #ec0000;
}

.c8 {
  margin: 0px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  color: inherit;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 100%;
}

.c6 {
  display: block;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url("-react-component: svg-mock;");
}

.c5 {
  display: inline-block;
  height: 30px;
  width: 68px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5.c5:focus {
  outline-color: #FEC813;
  outline-style: solid;
  outline-offset: 0px;
  outline-width: 3px;
}

.c3 {
  margin: 0;
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  box-sizing: content-box;
}

.c3 .c4 {
  margin-right: 10px;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  box-sizing: content-box;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c0 .c11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c0 .c7 {
  margin-top: -2px;
}

.c0 .c1 {
  height: 50px;
  padding-right: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 17px;
  right: 45px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media screen and (min-width:540px) {
  .c2 {
    padding: 0 15px;
  }
}

@media screen and (max-width:374px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (min-width:375px) {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (max-width:1199px) {
  .c13 {
    display: none;
  }
}

<div
  class="c0"
  id="header"
>
  <header
    class="c1 c2"
  >
    <h1
      class="c3"
    >
      <a
        class="c4 c5"
        href="http://data.amsterdam.nl"
      >
        <span
          class="c6"
        />
      </a>
      <a
        class="c7 c8 c9 c10"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <nav
      class="c11 c12"
    />
    <div
      class="c13"
    />
  </header>
</div>
`;

exports[`Header should render the short version without the full width 1`] = `
.c10 {
  margin: 0;
  color: #000000;
  font-weight: inherit;
  font-size: 1rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.25;
  margin-bottom: 0;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 0;
  padding: 0 10px;
  background-color: #ffffff;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  margin: 0 auto;
  padding: 0 10px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  max-width: 1430px;
}

.c2::after {
  content: '';
  display: block;
  min-height: inherit;
  font-size: 0;
}

.c2 .c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  color: #000000;
}

.c9:focus {
  background-color: #FEC813;
}

.c9 .c15 {
  margin: 4px;
}

.c9 .c15 svg rect,
.c9 .c15 svg polygon,
.c9 .c15 svg path {
  fill: #000000;
}

.c9:hover {
  color: #ec0000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:hover .c15 svg rect,
.c9:hover .c15 svg polygon,
.c9:hover .c15 svg path {
  fill: #ec0000;
}

.c8 {
  margin: 0px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c8:hover {
  color: inherit;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 100%;
}

.c6 {
  display: block;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url("-react-component: svg-mock;");
}

.c5 {
  display: inline-block;
  height: 30px;
  width: 68px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c5.c5:focus {
  outline-color: #FEC813;
  outline-style: solid;
  outline-offset: 0px;
  outline-width: 3px;
}

.c3 {
  margin: 0;
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  box-sizing: content-box;
}

.c3 .c4 {
  margin-right: 10px;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  box-sizing: content-box;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c0 .c11 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c0 .c7 {
  margin-top: -2px;
}

.c0 .c1 {
  height: 50px;
  padding-right: 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 17px;
  right: 45px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media screen and (min-width:540px) {
  .c2 {
    padding: 0 15px;
  }
}

@media screen and (max-width:374px) {
  .c8 {
    font-size: 14px;
  }
}

@media screen and (min-width:375px) {
  .c8 {
    font-size: 16px;
  }
}

@media screen and (max-width:1199px) {
  .c13 {
    display: none;
  }
}

<div
  class="c0"
  id="header"
>
  <header
    class="c1 c2"
  >
    <h1
      class="c3"
    >
      <a
        class="c4 c5"
        href="http://data.amsterdam.nl"
      >
        <span
          class="c6"
        />
      </a>
      <a
        class="c7 c8 c9 c10"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <nav
      class="c11 c12"
    />
    <div
      class="c13"
    />
  </header>
</div>
`;

exports[`Header should render the tall version 1`] = `
.c13 {
  margin: 0;
  color: #000000;
  font-weight: inherit;
  font-size: 1rem;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  line-height: 1.25;
  margin-bottom: 0;
  font-stretch: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 0;
  padding: 0 10px;
  background-color: #ffffff;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  margin: 0 auto;
  padding: 0 10px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  max-width: none;
}

.c3::after {
  content: '';
  display: block;
  min-height: inherit;
  font-size: 0;
}

.c3 .c19 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 0;
}

.c12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-weight: 700;
  color: #000000;
}

.c12:focus {
  background-color: #FEC813;
}

.c12 .c20 {
  margin: 4px;
}

.c12 .c20 svg rect,
.c12 .c20 svg polygon,
.c12 .c20 svg path {
  fill: #000000;
}

.c12:hover {
  color: #ec0000;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c12:hover .c20 svg rect,
.c12:hover .c20 svg polygon,
.c12:hover .c20 svg path {
  fill: #ec0000;
}

.c11 {
  margin: 0px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: #000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11:hover {
  color: inherit;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 100%;
}

.c9 {
  display: block;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url("-react-component: svg-mock;");
}

.c7 {
  display: inline-block;
  height: 30px;
  width: 68px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7.c7:focus {
  outline-color: #FEC813;
  outline-style: solid;
  outline-offset: 0px;
  outline-width: 3px;
}

.c17 .c6 {
  margin-right: 10px;
}

.c5 {
  margin: 0;
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  box-sizing: content-box;
}

.c5 .c6 {
  margin-right: 10px;
}

.c18 .c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c18 .c10 {
  margin-top: -2px;
}

.c18 .c2 {
  height: 50px;
  padding-right: 0;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  box-sizing: content-box;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c0 .c14 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 17px;
  right: 45px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media screen and (min-width:540px) {
  .c3 {
    padding: 0 15px;
  }
}

@media screen and (max-width:374px) {
  .c11 {
    font-size: 14px;
  }
}

@media screen and (min-width:375px) {
  .c11 {
    font-size: 16px;
  }
}

@media screen and (min-width:1200px) {
  .c7 {
    height: 68px;
    width: 100px;
  }

  .c7 .c8 {
    background-image: url("-react-component: svg-mock;");
  }
}

@media screen and (min-width:1200px) {
  .c5 .c6 {
    margin-right: 40px;
  }
}

@media screen and (max-width:1199px) {
  .c0 .c10 {
    margin-top: -2px;
  }

  .c0 .c2 {
    height: 50px;
    padding-right: 0;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    box-shadow: none;
    position: relative;
  }

  .c0:after {
    content: '';
    display: block;
    left: 0;
    right: 0;
    height: 50px;
    margin-top: -50px;
    background-color: #F5F5F5;
  }

  .c0 .c2 {
    z-index: 100;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c0 .c1 {
    background-color: transparent;
  }

  .c0 .c10 {
    margin-top: 0px;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    line-height: 38px;
    font-size: 30px;
  }

  .c0 .c4 {
    height: 78px;
    padding: 15px 0;
  }

  .c0 .c14 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-left: 25px;
    margin-right: 25px;
    height: 50px;
  }
}

@media screen and (max-width:1199px) {
  .c16 {
    display: none;
  }
}

<div
  class="c0"
  id="header"
>
  <header
    class="c1 c2 c3"
  >
    <h1
      class="c4 c5"
    >
      <a
        class="c6 c7"
        href="http://data.amsterdam.nl"
      >
        <span
          class="c8 c9"
        />
      </a>
      <a
        class="c10 c11 c12 c13"
        href="http://data.amsterdam.nl"
      >
        Data en informatie
      </a>
    </h1>
    <nav
      class="c14 c15"
    />
    <div
      class="c16"
    />
  </header>
</div>
`;

exports[`Header should render the tall version without a title 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 0;
  padding: 0 10px;
  background-color: #ffffff;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  height: 100%;
  margin: 0 auto;
  padding: 0 10px;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  max-width: none;
}

.c3::after {
  content: '';
  display: block;
  min-height: inherit;
  font-size: 0;
}

.c3 .c15 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-bottom: 0;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  height: 100%;
}

.c9 {
  display: block;
  height: 100%;
  width: 100%;
  background-size: cover;
  background-image: url("-react-component: svg-mock;");
}

.c7 {
  display: inline-block;
  height: 30px;
  width: 68px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c7.c7:focus {
  outline-color: #FEC813;
  outline-style: solid;
  outline-offset: 0px;
  outline-width: 3px;
}

.c13 .c6 {
  margin-right: 10px;
}

.c5 {
  margin: 0;
  font-weight: 700;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: normal;
  -webkit-justify-content: normal;
  -ms-flex-pack: normal;
  justify-content: normal;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  box-sizing: content-box;
}

.c5 .c6 {
  margin-right: 10px;
}

.c14 .c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c14 .c2 {
  height: 50px;
  padding-right: 0;
}

.c0 {
  background-color: #ffffff;
  margin: 0 auto;
  width: 100%;
  box-shadow: 0 4px rgba(0,0,0,0.04);
  box-sizing: content-box;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 2;
}

.c0 .c10 {
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  margin-left: 15px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  top: 17px;
  right: 45px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

@media screen and (min-width:540px) {
  .c3 {
    padding: 0 15px;
  }
}

@media screen and (min-width:1200px) {
  .c7 {
    height: 68px;
    width: 100px;
  }

  .c7 .c8 {
    background-image: url("-react-component: svg-mock;");
  }
}

@media screen and (min-width:1200px) {
  .c5 .c6 {
    margin-right: 40px;
  }
}

@media screen and (max-width:1199px) {
  .c0 .sc-bZQynM {
    margin-top: -2px;
  }

  .c0 .c2 {
    height: 50px;
    padding-right: 0;
  }
}

@media screen and (min-width:1200px) {
  .c0 {
    box-shadow: none;
    position: relative;
  }

  .c0:after {
    content: '';
    display: block;
    left: 0;
    right: 0;
    height: 50px;
    margin-top: -50px;
    background-color: #F5F5F5;
  }

  .c0 .c2 {
    z-index: 100;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }

  .c0 .c1 {
    background-color: transparent;
  }

  .c0 .sc-bZQynM {
    margin-top: 0px;
    -webkit-align-self: flex-start;
    -ms-flex-item-align: start;
    align-self: flex-start;
    line-height: 38px;
    font-size: 30px;
  }

  .c0 .c4 {
    height: 78px;
    padding: 15px 0;
  }

  .c0 .c10 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    margin-left: 25px;
    margin-right: 25px;
    height: 50px;
  }
}

@media screen and (max-width:1199px) {
  .c12 {
    display: none;
  }
}

<div
  class="c0"
  id="header"
>
  <header
    class="c1 c2 c3"
  >
    <h1
      class="c4 c5"
    >
      <a
        class="c6 c7"
        href="http://data.amsterdam.nl"
      >
        <span
          class="c8 c9"
        />
      </a>
    </h1>
    <nav
      class="c10 c11"
    />
    <div
      class="c12"
    />
  </header>
</div>
`;
